Include AddServiceComponent unit tests

--- a/angular.json
+++ b/angular.json
@@ -119,7 +119,8 @@
               "src/styles.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
             ],
-            "scripts": []
+            "scripts": [],
+            "karmaConfig": "karma.conf.js"
           }
         }
       }
